--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav class="navbar">
               <div class="logo"><a href="#">HeySister></a></div>
               <ul class="menu">
-                <li><a href="/">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="info.html">Understanding</a></li>
                 <li><a href="causes.html">Causes</a></li>
                 <li><a href="hygiene.html">Hygiene</a></li>
@@ -23,7 +23,21 @@
             </nav>
             <div class="text-content">
               <h2>Periods problem?<br>I got you covered sissy</h2>
-              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> </div>
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+              <p>Here you can find information regarding your periods problem and how to counter them smartly.</p> 
+
+            </div>
           </header>
           
     </body>
